feat: add component

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MobileWebPage-editor",
+  "name": "mobilewebpage-editor",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -12,13 +12,17 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.2.15",
+    "lodash-es": "^4.17.21",
+    "uuid": "^8.3.2",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.11.12",
+    "@types/uuid": "^8.3.4",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
