--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.2.15",
+    "axios": "^1.2.6",
     "lodash-es": "^4.17.21",
     "pinia": "^2.0.28",
     "rgb-hex": "^4.0.0",
